@@ -26,6 +26,20 @@ name|commons
 operator|.
 name|io
 operator|.
+name|Charsets
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
 name|FileUtils
 import|;
 end_import
@@ -706,7 +720,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileReader
+name|FileInputStream
 import|;
 end_import
 
@@ -1004,7 +1018,7 @@ operator|new
 name|Properties
 argument_list|()
 decl_stmt|;
-name|FileReader
+name|InputStreamReader
 name|r
 init|=
 literal|null
@@ -1014,9 +1028,17 @@ block|{
 name|r
 operator|=
 operator|new
-name|FileReader
+name|InputStreamReader
+argument_list|(
+operator|new
+name|FileInputStream
 argument_list|(
 name|file
+argument_list|)
+argument_list|,
+name|Charsets
+operator|.
+name|UTF_8
 argument_list|)
 expr_stmt|;
 name|userConf
@@ -2951,6 +2973,10 @@ operator|new
 name|InputStreamReader
 argument_list|(
 name|is2
+argument_list|,
+name|Charsets
+operator|.
+name|UTF_8
 argument_list|)
 argument_list|)
 expr_stmt|;
